css/parser/tests/errors/rome/invalid/page/space/output.stderr
error: Expected Ident
 --> $DIR/tests/errors/rome/invalid/page/space/input.css:1:12
  |
1 | @page Page: blank {
  |            ^

